--- a/web-server/package.json
+++ b/web-server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "hbs": "^4.1.2",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "postman-request": "^2.88.1-postman.30"
   }
 }
