--- a/web-server/package.json
+++ b/web-server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js -e js,hbs"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +13,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "hbs": "^4.1.2",
-    "nodemon": "^2.0.12",
     "postman-request": "^2.88.1-postman.30"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
